--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,10 @@ input[type="number"]::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  /* text-indent: 3px; */
+  /* text-overflow: ""; */
+}
